# ray-el

./: NOTICE.txt  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: 404.html  index.html  index.md  objects.inv
docs-src/concepts/: ray_datasets.md
docs-src/getting_started/: installation.md  starting_a_ray_cluster.md  using_config_files.md  using_the_cli.md  using_the_python_api.md
docs-src/guides/: database_to_database.md  database_to_file.md  file_to_database.md
docs-src/reference/: summary.md
docs-src/reference/ray_el/: actors.md  bundle.md  datasources.md  index.md  read.md  sqlgen.md
docs/autoapi/ray_el/: index.html
docs/autoapi/ray_el/actors/: index.html
docs/autoapi/ray_el/datasources/: index.html
docs/autoapi/ray_el/read/: index.html
docs/autoapi/summary/: index.html
docs/concepts/ray_datasets/: index.html
docs/getting_started/installation/: index.html
docs/getting_started/starting_a_ray_cluster/: index.html
docs/getting_started/using_config_files/: index.html
docs/getting_started/using_the_cli/: index.html
docs/getting_started/using_the_python_api/: index.html
docs/guides/database_to_database/: index.html
docs/guides/database_to_file/: index.html
docs/guides/file_to_database/: index.html
docs/reference/ray_el/: index.html
docs/reference/summary/: index.html
site/: index.html  objects.inv
src/ray_el/: __init__.py  actors.py  bundle.py  datasources.py  read.py  sqlgen.py
tests/: nyc_taxi_2023-01-01.parquet  penguins.parquet  test_bundle.py
(+8 files in other folders)
