[project]
name = "ray-el"
version = "0.1.0"
description = "A data extract-load tool built on top of the Ray distributed framework"
readme = "README.md"
authors = [
    { name = "Sam Hurst", email = "20537436+samuelrhurst@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ray[data,default]>=2.52.0",
    "sqlglot>=28.0.0",
]

[project.scripts]
ray-el = "ray_el:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
